Arreglado modulo Representantes